--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,9 +30,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-net-3.6.jar=lib/commons-net-3.6.jar
+file.reference.DJNativeSwing-SWT.jar=lib/DJNativeSwing-SWT.jar
+file.reference.DJNativeSwing-SWTDemo.jar=lib/DJNativeSwing-SWTDemo.jar
+file.reference.DJNativeSwing.jar=lib/DJNativeSwing.jar
 file.reference.jfoenix-8.0.4.jar=/Users/HugoLuna/Desktop/jfoenix-8.0.4.jar
+file.reference.jxbrowser-6.20.jar=lib/jxbrowser-6.20.jar
+file.reference.jxbrowser-mac-6.20.jar=lib/jxbrowser-mac-6.20.jar
 file.reference.KGradientPanel.jar=lib/KGradientPanel.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=/Users/HugoLuna/conn/mysql-connector-java-5.1.46-bin.jar
+file.reference.vlcj-3.7.0.jar=lib/vlcj-3.7.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,7 +46,13 @@ javac.classpath=\
     ${file.reference.KGradientPanel.jar}:\
     ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
     ${file.reference.jfoenix-8.0.4.jar}:\
-    ${file.reference.commons-net-3.6.jar}
+    ${file.reference.commons-net-3.6.jar}:\
+    ${file.reference.DJNativeSwing-SWTDemo.jar}:\
+    ${file.reference.DJNativeSwing-SWT.jar}:\
+    ${file.reference.DJNativeSwing.jar}:\
+    ${file.reference.jxbrowser-mac-6.20.jar}:\
+    ${file.reference.jxbrowser-6.20.jar}:\
+    ${file.reference.vlcj-3.7.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
